frontend/tests/cases/positive/graded/resolutionIntervalInf.gr
extract : forall {a : Type} . a [0..∞] -> a
extract [x] = x

dropper : forall {a : Type} . a [0..∞] -> ()
dropper [x] = ()