frontend/tests/cases/negative/extensions/noTopLevelApprox.gr
language NoTopLevelApprox

copy : forall {a : Type} . a [0..3] -> (a, a)
copy [x] = (x, x)
